# opx-platform-config-extreme-x870

./: Makefile.am  configure.ac
debian/: changelog  control
extreme/x870/cfg/: platform_init.sh
extreme/x870/cfg/env-tmpctl/: config.json
extreme/x870/cfg/lib/systemd/system-shutdown/: platform_shutdown.sh
extreme/x870/cfg/pas/: config.xml
extreme/x870/cfg/sdi/: device.xml  entity.xml
