bin_SCRIPTS =	extreme/x870/cfg/platform_init.sh extreme/x870/cfg/lib/systemd/system-shutdown/platform_shutdown.sh

data_env_tmpctldir =	$(sysconfdir)/opx/env-tmpctl
data_env_tmpctl_DATA =	extreme/x870/cfg/env-tmpctl/config.json

data_nasdir =	$(sysconfdir)/opx/nas
data_nas_DATA =	extreme/x870/cfg/nas/base_port_physical_mapping_table.xml extreme/x870/cfg/nas/base_qos_init.xml \
		extreme/x870/cfg/nas/mac_address_alloc.xml extreme/x870/cfg/nas/phy_media_default_npu_setting.xml \
		extreme/x870/cfg/nas/switch.xml

data_pasdir =	$(sysconfdir)/opx/pas
data_pas_DATA =	extreme/x870/cfg/pas/config.xml

data_saidir =	$(sysconfdir)/opx/sai
data_sai_DATA =	extreme/x870/cfg/sai/init.xml

data_sdidir =	$(sysconfdir)/opx/sdi
data_sdi_DATA =	extreme/x870/cfg/sdi/device.xml extreme/x870/cfg/sdi/entity.xml

data_system_mgmt_interfacedir =		$(sysconfdir)/opx/system-mgmt-interface
data_system_mgmt_interface_DATA =	extreme/x870/cfg/system-mgmt-interface/mgmt-intf.xml
